--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -19,7 +19,7 @@ body {
 }
 
 .content{
-    margin-bottom : 100%;
+    margin-bottom : 100px;
     margin-top : 50px;
     margin-left : 200px;
     margin-right : 200px
