--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,6 +24,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="text-end">
+                <a role="button" id="signup" class="btn btn-outline-primary" th:href="@{/user/signup}">회원가입</a>
+                <a role="button" id="login" class="btn btn-outline-primary" th:href="@{/user/login}">Login</a>
+                <a role="button" id="logout" class="btn btn-outline-primary" th:href="@{/user/logout}">Logout</a>
+            </div>
+
         </div>
     </nav>
     <th:block th:if="${msg} != null">
