--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,29 +12,38 @@
     <h4>회원가입</h4>
     <form id="frm" name="frm" class="container" th:action="@{/user/signup}"
             method="post" th:object="${userCreateForm}">
+        
+        <!--  에러 처리하기 fragment 삽입  -->
+        <div th:replace="~{fragments/form_errors:: formErrorsFragment}"></div>
+
         <div class="mb3">
             <label class="form-label">사용자ID</label>
             <input id="username" name="username" type="text" class="form-control" th:field="*{username}">
+            <div class="error-class" th:errors="*{username}"></div>
         </div>
 
         <div class="mb3">
             <label class="form-label">비밀번호</label>
             <input id="password1" name="password1" type="password1" class="form-control" th:field="*{password1}">
+            <div class="error-class" th:errors="*{password1}"></div>
         </div>
 
         <div class="mb3">
             <label class="form-label">비밀번호 확인</label>
             <input id="password2" name="password2" type="password" class="form-control" th:field="*{password2}">
+            <div class="error-class" th:errors="*{password2}"></div>
         </div>
 
         <div class="mb3">
             <label class="form-label">이메일</label>
             <input id="email" name="email" type="email" class="form-control" th:field="*{email}">
+            <div class="error-class" th:errors="*{email}"></div>
         </div>
 
         <div class="mb3">
             <label class="form-label">닉네임</label>
             <input id="nickname" name="nickname" type="text" class="form-control" th:field="*{nickname}">
+            <div class="error-class" th:errors="*{nickname}"></div>
         </div>
 
         <input type="submit" value="회원가입" class="btn btn-primary">
